--- a/assets/interface/plan.html
+++ b/assets/interface/plan.html
@@ -11,7 +11,7 @@
     <title>TSM</title>
 </head>
 
-<body onload="window.GetTestPlan('%s', '%s')">
+<body onload="window.GetTestPlan()">
     <div id="menu_bar">
         <button class="menu_bar_button" onclick="window.OpenPage('/projects')">
             <!-- Home -->
@@ -35,14 +35,14 @@
                     d="M11 15H17V17H11V15M9 7H7V9H9V7M11 13H17V11H11V13M11 9H17V7H11V9M9 11H7V13H9V11M21 5V19C21 20.1 20.1 21 19 21H5C3.9 21 3 20.1 3 19V5C3 3.9 3.9 3 5 3H19C20.1 3 21 3.9 21 5M19 5H5V19H19V5M9 15H7V17H9V15Z" />
             </svg>
         </button>
-        <button class="menu_bar_button">
+        <button class="menu_bar_button" onclick="window.OpenPage('/project/%s/statistics')">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                 <title>Statistics</title>
                 <path d="M22,21H2V3H4V19H6V10H10V19H12V6H16V19H18V14H22V21Z" />
             </svg>
         </button>
         <div class="other-buttons">
-            <button class="menu_bar_button">
+            <button class="menu_bar_button" onclick="window.OpenPage('/faq')">
                 <!-- FAQ -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                     <title>FAQ</title>
