--- a/assets/interface/projects.html
+++ b/assets/interface/projects.html
@@ -12,6 +12,16 @@
 </head>
 
 <body onload="window.GetProjects()">
+    <div id="create-dialog-overlay" class="dialog-overlay">
+        <div id="create-dialog" class="dialog">
+            <span>Имя проекта</span>
+            <input id="create-dialog-name" type="text">
+            <div class="dialog-buttons">
+                <button onclick="window.close_dialog('create-dialog', 'create-dialog-overlay')">Отменить</button>
+                <button onclick="window.AddProject()">Создать</button>
+            </div>
+        </div>
+    </div>
     <div id="menu_bar">
         <button class="menu_bar_button" onclick="window.OpenPage('/projects')">
             <!-- Home -->
@@ -21,13 +31,14 @@
             </svg>
         </button>
         <div class="other-buttons">
-            <button class="menu_bar_button" onclick="window.AddProject()">
+            <button class="menu_bar_button" onclick="window.open_dialog('create-dialog', 'create-dialog-overlay')">
                 <!-- Add Project (Plus) -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                     <title>Add Project</title>
                     <path
                         d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M11,7H13V11H17V13H13V17H11V13H7V11H11V7Z" />
                 </svg>
+                
             </button>
             <button class="menu_bar_button" onclick="window.OpenPage('/faq')">
                 <!-- FAQ -->
@@ -41,7 +52,11 @@
     </div>
     <div class="main-area">
         <div id="headline">
-            Projects
+            Проекты
+        </div>
+        <div id="search-line">
+            <button onclick="window.GetProjects()"><span>Поиск</span></button>
+            <input id="search-line-text" type="text" onsubmit="window.GetProjects()">
         </div>
         <div id="projects" class="list"></div>
     </div>
