--- a/assets/interface/project_settings.html
+++ b/assets/interface/project_settings.html
@@ -3,24 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Style Place -->
-    %s
-    <!-- Script Place -->
-    %s
+    {{.Style}}
+    {{.Script}}
     <title>TSM</title>
 </head>
 
-<body onload="window.GetProjectSettings('%s')">
-    <div id="create-dialog-overlay" class="dialog-overlay">
-        <div id="create-dialog" class="dialog">
-            <span>Имя тест-кейса</span>
-            <input id="create-dialog-name" type="text">
-            <div class="dialog-buttons">
-                <button onclick="window.close_dialog('create-dialog', 'create-dialog-overlay')">Отменить</button>
-                <button onclick="window.AddTestCase('%s')">Создать</button>
-            </div>
-        </div>
-    </div>
+<body onload="window.GetProjectSettings('{{.ProjectId}}')">
     <div id="menu_bar">
         <button class="menu_bar_button" onclick="window.OpenPage('/projects')">
             <!-- Home -->
@@ -29,14 +17,14 @@
                 <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
             </svg>
         </button>
-        <button class="menu_bar_button" onclick="window.OpenPage('/project/%s/cases')">
+        <button class="menu_bar_button" onclick="window.OpenPage('/project/{{.ProjectId}}/cases')">
             <!-- Test Cases -->
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                 <title>Test Cases</title>
                 <path d="M3,4H7V8H3V4M9,5V7H21V5H9M3,10H7V14H3V10M9,11V13H21V11H9M3,16H7V20H3V16M9,17V19H21V17H9" />
             </svg>
         </button>
-        <button class="menu_bar_button" onclick="window.OpenPage('/project/%s/plans')">
+        <button class="menu_bar_button" onclick="window.OpenPage('/project/{{.ProjectId}}/plans')">
             <!-- Test Plans -->
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                 <title>Test Plans</title>
@@ -44,13 +32,13 @@
                     d="M11 15H17V17H11V15M9 7H7V9H9V7M11 13H17V11H11V13M11 9H17V7H11V9M9 11H7V13H9V11M21 5V19C21 20.1 20.1 21 19 21H5C3.9 21 3 20.1 3 19V5C3 3.9 3.9 3 5 3H19C20.1 3 21 3.9 21 5M19 5H5V19H19V5M9 15H7V17H9V15Z" />
             </svg>
         </button>
-        <button class="menu_bar_button" onclick="window.OpenPage('/project/%s/statistics')">
+        <button class="menu_bar_button" onclick="window.OpenPage('/project/{{.ProjectId}}/statistics')">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                 <title>Statistics</title>
                 <path d="M22,21H2V3H4V19H6V10H10V19H12V6H16V19H18V14H22V21Z" />
             </svg>
         </button>
-        <button class="menu_bar_button" onclick="window.OpenPage('/project/%s/settings')"
+        <button class="menu_bar_button" onclick="window.OpenPage('/project/{{.ProjectId}}/settings')"
             style="background-color: gray;">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                 <title>Settings</title>
@@ -70,9 +58,7 @@
         </div>
     </div>
     <div class="main-area">
-        <div id="headline">
-            %s
-        </div>
+        <div id="headline">{{.ProjectName}}</div>
         <div id="settings" class="list">
             <div class="settings-item">
                 <span class="settings-item-headline">Участники</span>
@@ -86,11 +72,10 @@
                 <span class="settings-item-headline">Тэги</span>
                 <div>
                     <input type="text" id="settings-tags-input">
-                    <button onclick="window.AddProjectTag('%s')">Добавить</button>
+                    <button onclick="window.AddProjectTag('{{.ProjectId}}')">Добавить</button>
                 </div>
-                <div id ="tags" class="with-text-placeholder tags-list"></div>
+                <div id="tags" class="with-text-placeholder tags-list"></div>
                 <span class="text-placeholder settings-item-content">Нет тэгов</span>
-
             </div>
         </div>
     </div>
