--- a/assets/interface/projects.html
+++ b/assets/interface/projects.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Style Place -->
-    %s
-    <!-- Script Place -->
-    %s
+    {{.Style}}
+    {{.Script}}
     <title>TSM</title>
 </head>
 
