--- a/assets/interface/plan.html
+++ b/assets/interface/plan.html
@@ -86,20 +86,13 @@
                 </div>
             </div>
             <div class="test-page-element tags">
-                <div class="edit-header">
-                    <span class="edit-header-text">Тэги</span>
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
-                            <title>Edit</title>
-                            <path
-                                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" />
-                        </svg>
-                    </button>
+                <span class="test-page-element-header">Тэги</span>
+                <div>
+                    <input type="text" id="tags-input">
+                    <button onclick="window.AddTestPlanTag('{{.ProjectId}}')">Добавить</button>
                 </div>
-                <div class="tags-list">
-                    <span>Plan tag 1</span>
-                    <span>Plan tag 2</span>
-                </div>
+                <div class="with-text-placeholder tags-list"></div>
+                <span class="text-placeholder settings-item-content">Нет тэгов</span>
             </div>
         </div>
     </div>
