update test plan select

--- a/assets/interface/plan.html
+++ b/assets/interface/plan.html
@@ -65,7 +65,7 @@
                             <span style="display: none;">Сохранить</span>
                         </button>
                     </div>
-                    <span id="description-text" class="text" style="word-break: break-all;"></span>
+                    <span id="description-text" class="with-text-placeholder" style="word-break: break-all;"></span>
                     <span id="description-text-placeholder" class="text-placeholder">
                         Нет описания
                     </span>
