--- a/assets/interface/case.html
+++ b/assets/interface/case.html
@@ -91,8 +91,9 @@
                     <div class="edit-header">
                         <span>Комментарии</span>
                     </div>
-                    <textarea id="comment-text-area" class="edit-textarea"></textarea>
-                    <button>Комментировать</button>
+                    <input type="text" id="case-comment-input">
+                    <button type="submit" onclick="window.AddCaseComment('{{.ProjectId}}', '{{.TestCaseId}}') ">Комментировать</button>
+                    <div id="case-comments-list" class="list"></div>
                 </div>
             </div>
             <div class="test-page-element tags">
