--- a/assets/interface/projects.html
+++ b/assets/interface/projects.html
@@ -28,7 +28,7 @@
             </svg>
         </button>
         <div class="other-buttons">
-            <button class="menu_bar_button" onclick="window.open_dialog('create-dialog', 'create-dialog-overlay')">
+            <button id="create-project-button" class="menu_bar_button" onclick="window.open_dialog('create-dialog', 'create-dialog-overlay')">
                 <!-- Add Project (Plus) -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                     <title>Add Project</title>
