add hidden button

--- a/assets/interface/plan.html
+++ b/assets/interface/plan.html
@@ -67,7 +67,7 @@
                 <div class="test-page-element">
                     <div class="edit-header">
                         <span class="edit-header-text">Описание</span>
-                        <button onclick="window.Edit(this, 'description-text', 'description-text-area', 'description')">
+                        <button id = "edit_plan_describe" onclick="window.Edit(this, 'description-text', 'description-text-area', 'description')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                                 <title>Edit</title>
                                 <path
@@ -85,7 +85,7 @@
                 <div class="test-page-element">
                     <div class="edit-header">
                         <span class="edit-header-text">Тест-кейсы</span>
-                        <button onclick="window.open_dialog('append-dialog', 'append-dialog-overlay')">
+                        <button id="add_test_case" onclick="window.open_dialog('append-dialog', 'append-dialog-overlay')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                                 <title>Add Test Case</title>
                                 <path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
