--- a/assets/interface/project_plans.html
+++ b/assets/interface/project_plans.html
@@ -57,7 +57,7 @@
             </svg>
         </button>
         <div class="other-buttons">
-            <button class="menu_bar_button" onclick="window.open_dialog('create-dialog', 'create-dialog-overlay')">
+            <button class="menu_bar_button" id = "add_test_plan" onclick="window.open_dialog('create-dialog', 'create-dialog-overlay')">
                 <!-- Add Test Plan (Plus) -->
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#ffffff">
                     <title>Add Test Plan</title>
