--- a/assets/interface/project_statistics.html
+++ b/assets/interface/project_statistics.html
@@ -76,11 +76,11 @@
                     <div>
                         <div class="pie-chart-header">
                             <div class="color" style="background-color: rgb(152, 201, 123);"></div>
-                            <span class="text">Success</span>
+                            <span class="text">Успех</span>
                         </div>
                         <div class="pie-chart-header">
                             <div class="color" style="background-color: rgb(185, 107, 107);"></div>
-                            <span class="text">Failed</span>
+                            <span class="text">Фиаско</span>
                         </div>
                     </div>
                 </div>
@@ -101,11 +101,11 @@
                     <div>
                         <div class="pie-chart-header">
                             <div class="color" style="background-color: rgb(152, 201, 123);"></div>
-                            <span class="text">Success</span>
+                            <span class="text">Успех</span>
                         </div>
                         <div class="pie-chart-header">
                             <div class="color" style="background-color: rgb(185, 107, 107);"></div>
-                            <span class="text">Failed</span>
+                            <span class="text">Фиаско</span>
                         </div>
                     </div>
                 </div>
