--- a/assets/authentication/authentication.html
+++ b/assets/authentication/authentication.html
@@ -19,6 +19,6 @@
         <span>Пароль</span>
         <input id="auth-password" type="text">
         <button id="auth-button" onclick="window.auth()">Войти</button>
-        <button id="auth-button" onclick="window.register()">Зарегестрироваться</button>
+        <button id="auth-button" onclick="window.register()">Зарегистрироваться</button>
     </div>
 </body>
