--- a/assets/interface/plan.html
+++ b/assets/interface/plan.html
@@ -116,6 +116,9 @@
                     </div>
                     <table id="test-runs-table"></table>
                 </div>
+                <div class="test-page-element">
+                    <button onclick="DeleteTestPlan('{{.ProjectId}}')">Удалить</button>
+                </div>
             </div>
             <div>
                 <div class="test-page-element tags">
