--- a/assets/interface/project_settings.html
+++ b/assets/interface/project_settings.html
@@ -86,6 +86,9 @@
                 <div id="tags" class="with-text-placeholder tags-list"></div>
                 <span class="text-placeholder settings-item-content">Нет тэгов</span>
             </div>
+            <div id="settings-project-archive" class="settings-item">
+                <button id="settings-project-delete-button">Удалить</button>
+            </div>
         </div>
     </div>
 </body>
